fixing position with extra margin

--- a/style/partials/_home.scss
+++ b/style/partials/_home.scss
@@ -32,7 +32,7 @@ body {
     @include font-settings();
     width: 280px;
     height: 150px;
-    position: relative;
+    position: absolute;
     left: 80px;
     top: 40px;
     border: 1px solid rgb(26, 26, 26);
@@ -55,7 +55,7 @@ body {
     flex-direction: row;
     justify-content: center;
     left: 135px;
-    top: 100px;
+    top: 250px;
     width: 280px;
 
     h2 {
@@ -75,7 +75,8 @@ body {
 
 footer {
     position: relative;
-    left: 70px;
-    top: 430px;
+    top: 230px;
     font-size: 10px;
+    margin: 100px 150px;
+    width: 300px;
 }
