--- a/style/partials/_nav.scss
+++ b/style/partials/_nav.scss
@@ -60,9 +60,9 @@ header {
 }
 
     #header_socials {
-        position: relative;
+        position: absolute;
         left: 260px;
-        top: 10px;
+        top: 5px;
     }
     #header_socials img {
         width: 30px;
