--- a/style/style.css
+++ b/style/style.css
@@ -63,9 +63,9 @@ header a {
 }
 
 #header_socials {
-  position: relative;
+  position: absolute;
   left: 260px;
-  top: 10px;
+  top: 5px;
 }
 
 #header_socials img {
@@ -115,7 +115,7 @@ body {
   font-family: "Lora", serif;
   width: 280px;
   height: 150px;
-  position: relative;
+  position: absolute;
   left: 80px;
   top: 40px;
   border: 1px solid #1a1a1a;
@@ -145,7 +145,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   left: 135px;
-  top: 100px;
+  top: 250px;
   width: 280px;
 }
 
@@ -171,9 +171,10 @@ body {
 
 footer {
   position: relative;
-  left: 70px;
-  top: 430px;
+  top: 230px;
   font-size: 10px;
+  margin: 100px 150px;
+  width: 300px;
 }
 
 .about_banner {
